--- a/directors/ismael/index.html
+++ b/directors/ismael/index.html
@@ -181,11 +181,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -225,7 +223,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -235,6 +233,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -347,6 +346,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Plus--Happy-Marriage-.mp4?mrss=true', 'Plus', 'Happily Married'],['http://skinandbonesfilm.gosimian.com/assets/videos/ing_dutch_soccer--720p-.mp4?mrss=true', 'ING', 'Dutch Soccer'],['http://skinandbonesfilm.gosimian.com/assets/videos/ismael_ten_heuvel_-_lotto_summer--1080p-.mp4?mrss=true', 'Lotto', 'Summer'],['http://skinandbonesfilm.gosimian.com/assets/videos/mcdonald-s_---first_night_out-----1080p-.mp4?mrss=true', 'Mcdonald\'s', 'First Night Out'],['http://skinandbonesfilm.gosimian.com/assets/videos/centraal_beheer_-_container_2022_-_ismael_ten_heuvel--1080p-.mp4?mrss=true', 'Centraal Beheer', 'Container'],['http://skinandbonesfilm.gosimian.com/assets/videos/dc_mcdonalds_-_family_-_2023_-_by_ismael--1080p-.mp4?mrss=true', 'McDonald\'s', 'Family 2023'],['http://skinandbonesfilm.gosimian.com/assets/videos/Dutch-State-Lottery--Husky-Frida-.mp4?mrss=true', 'Dutch State Lottery', 'Husky Frida'],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
