--- a/directors/jackie-abraham/index.html
+++ b/directors/jackie-abraham/index.html
@@ -192,11 +192,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -236,7 +234,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -246,6 +244,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -358,6 +357,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/Coors-Light--Beer-Bows-.mp4?mrss=true', 'Coors Light', 'Beer Bows'],['https://skinandbonesfilm.gosimian.com/assets/videos/purgum_kickaspartame_230039_HD_20231124_1.mp4?mrss=true', 'PUR Gum', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/EARTH-RATED-BAG-BS.mp4?mrss=true', 'Earth Rated', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/WEALTHSIMPLE_THE-COFFEE_16x9_v01_fullframe.mp4?mrss=true', 'Wealthsimple', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/PHO-BS.mp4?mrss=true', 'Pho Tien', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/Mike-s-Hard-Lemonade--the-sunbather--15.mp4?mrss=true', 'Mike\'s Hard Lemonade', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/SOFC-C-BS.mp4?mrss=true', 'The Society Of Fancy Couches', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/NINE-TO-FIVE--1995_mov.mp4?mrss=true', 'NINE TO FIVE, 1995', ''],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
