--- a/directors/jeremi-durand/index.html
+++ b/directors/jeremi-durand/index.html
@@ -181,11 +181,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -225,7 +223,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -235,6 +233,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -347,6 +346,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/MUSTARD-ft-Travis-Scott---PL---DC-with-SPINOFF.mp4?mrss=true', 'MUSTARD ft. Travis Scott', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/CHINESE_MAN_WBHB_MASTER_WEB_REAL_VA.mp4?mrss=true', 'Chinese Man', 'We\'ve Been Here Before'],['http://skinandbonesfilm.gosimian.com/assets/videos/grand_corps_malade_-_retiens_les_re--ves_-hold_on_dreams-_-_official_music_video--1080p-.mp4?mrss=true', 'Grand Corps Malade', 'Retiens Les Rêves'],['http://skinandbonesfilm.gosimian.com/assets/videos/SEP_BUS_DIR-CUT-FINAL-SUBTITLES.mp4?mrss=true', 'SEP', 'Bus'],['https://skinandbonesfilm.gosimian.com/assets/videos/SYNC-FINAL-h265-4K.mp4?mrss=true', 'SYNC', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/ON-RUNNING---THE-ROGER---4K-16x9---TITLED-200628---1-85-DIR-CUT.mp4?mrss=true', 'ON RUNNING', 'The Roger'],['http://skinandbonesfilm.gosimian.com/assets/videos/LEVIS---HUMAN-KIND---SS22---DC.mp4?mrss=true', 'LEVIS', 'Human Kind'],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
