--- a/directors/leo-zuckerman/index.html
+++ b/directors/leo-zuckerman/index.html
@@ -214,11 +214,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -258,7 +256,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -268,6 +266,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -380,6 +379,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/Teaser_Native_HighBit.mp4?mrss=true', 'The Ways I Punish Myself Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Subaru_TrustTheRealSearchEngine_4K_ProRes_mov.mp4?mrss=true', 'Subaru', 'Trust The Real Search Engine'],['https://skinandbonesfilm.gosimian.com/assets/videos/Ping-boxed.mp4?mrss=true', 'PING', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/CL-DC-boxed.mp4?mrss=true', 'Canada Life', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/60-Toyota-Olympics---English.mp4?mrss=true', 'Toyota Olympics', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai-Fresh-Tracks.mp4?mrss=true', 'Hyundai', 'Fresh Tracks'],['https://skinandbonesfilm.gosimian.com/assets/videos/Nissan.mp4?mrss=true', 'Nissan Rogue', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/INT_VanLife_30E_16x9.mp4?mrss=true', 'Interac', 'Van Life'],['http://skinandbonesfilm.gosimian.com/assets/videos/Subaru_MasterProres1.mp4?mrss=true', 'Subaru', '10 Ways to Delay Your Arrival'],['http://skinandbonesfilm.gosimian.com/assets/videos/Hyundai--Sea-to-Sky-.mp4?mrss=true', 'Hyundai', 'Sea to Sky'],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
