--- a/directors/nikki-ross/index.html
+++ b/directors/nikki-ross/index.html
@@ -181,11 +181,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -225,7 +223,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -235,6 +233,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -347,6 +346,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['https://skinandbonesfilm.gosimian.com/assets/videos/BALLERS-NIKKIROSS-PRORES.mp4?mrss=true', 'Ballers', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/GARAGE-LA-MOTEL-NIKKIROSS-RECOLOURED.mp4?mrss=true', 'Garage LA Motel', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/RUGRATS-TENNIS-CLUB-FINAL.mp4?mrss=true', 'Rugrats Tennis Club', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/FISHY1.mp4?mrss=true', 'Fishy', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/GRG-BOSTON-PRORES-NIKKIROSS1.mp4?mrss=true', 'Garage Boston', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/21040_ROSS_S8MM_FINAL_mov.mp4?mrss=true', 'A New York Minute with George Davies', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/WARM-WONDERFUL-NIKKIROSS1.mp4?mrss=true', 'Warm + Wonderful', ''],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
