--- a/directors/rodney-lucas/index.html
+++ b/directors/rodney-lucas/index.html
@@ -64,7 +64,7 @@
 			<div class="director-portfolio-info-awards director-portfolio-info-awards-desktop">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
 				<ul class="director-portfolio-info-awards-list">
-					<li>Tribeca X Award, Best Episodic, 2021</li><li>Webby Award, Best Diversity & Inclusion, 2021</li><li>Telly Awards, 13 awards including four bronze, four silver, and three gold, 2021</li><li>AdStar Awards, Three awards, 2021</li><li>Cannes Lions, Shortlist recognition, 2021</li><li>Tribeca Film Festival, Official Selection, 2024</li>
+					<li>Tribeca Film Festival, Official Selection, 2024</li><li>Tribeca X Award, Best Episodic, 2021</li><li>Webby Award, Best Diversity & Inclusion, 2021</li><li>Telly Awards, 13 awards including four bronze, four silver, and three gold, 2021</li><li>AdStar Awards, Three awards, 2021</li><li>Cannes Lions, Shortlist recognition, 2021</li>
 				</ul>
 			</div>
 		
@@ -178,7 +178,7 @@
 			<div class="director-portfolio-info-awards">
 				<h2 class="director-portfolio-info-awards-title">Awards</h2>
 				<ul class="director-portfolio-info-awards-list">
-				<li>Tribeca X Award, Best Episodic, 2021</li><li>Webby Award, Best Diversity & Inclusion, 2021</li><li>Telly Awards, 13 awards including four bronze, four silver, and three gold, 2021</li><li>AdStar Awards, Three awards, 2021</li><li>Cannes Lions, Shortlist recognition, 2021</li><li>Tribeca Film Festival, Official Selection, 2024</li>
+				<li>Tribeca Film Festival, Official Selection, 2024</li><li>Tribeca X Award, Best Episodic, 2021</li><li>Webby Award, Best Diversity & Inclusion, 2021</li><li>Telly Awards, 13 awards including four bronze, four silver, and three gold, 2021</li><li>AdStar Awards, Three awards, 2021</li><li>Cannes Lions, Shortlist recognition, 2021</li>
 				</ul>
 			</div>
 		
@@ -203,11 +203,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -247,7 +245,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -257,6 +255,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -369,6 +368,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/sha-carri_richardson___nike_-waiting---Original---1-.mp4?mrss=true', 'Nike', 'Sha\'Carri Richardson'],['http://skinandbonesfilm.gosimian.com/assets/videos/63_60S_1080_Prores_mov.mp4?mrss=true', 'Nike', 'Chicago 63'],['https://skinandbonesfilm.gosimian.com/assets/videos/Ancestry-Commercial_mov.mp4?mrss=true', 'Ancestry', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/MARO_030C-16x9-mix.mp4?mrss=true', 'Under Armour', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/delta60DC_FINAL---h264.mp4?mrss=true', 'Delta', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/HuluTrailer.mp4?mrss=true', 'Hulu', 'Searching for Soul Food'],['https://skinandbonesfilm.gosimian.com/assets/videos/Steppin--Teaser-Final-with-logo_mov.mp4?mrss=true', 'Steppin\' Teaser', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/XNPI-3974-60H_NFL_2022_CAUSE_WE-SEE-YOU_BROADCAST_60_mov.mp4?mrss=true', 'NFL', 'Superbowl'],['https://skinandbonesfilm.gosimian.com/assets/videos/SP21_CHI_WNBA_DDESHIELDS_060sec_1920x1080_re-deliver.mp4?mrss=true', 'WNBA', ''],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
