--- a/directors/sebastian-hill-esbrand/index.html
+++ b/directors/sebastian-hill-esbrand/index.html
@@ -192,11 +192,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -236,7 +234,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -246,6 +244,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -358,6 +357,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/3-DoritosVMA-Spot3-CC2.mp4?mrss=true', 'Doritos', 'VMA'],['http://skinandbonesfilm.gosimian.com/assets/videos/ambr___true_colors--1080p-.mp4?mrss=true', 'Ambr', 'True Colours'],['https://skinandbonesfilm.gosimian.com/assets/videos/Lifesaving-Society-30.mp4?mrss=true', 'Lifesaving Society', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/Funhouse_30.mp4?mrss=true', 'Toronto Funhouse', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/TMU--Grit--DC.mp4?mrss=true', 'TMU', 'Grit'],['https://skinandbonesfilm.gosimian.com/assets/videos/BOOTY---NO-TEXT.mp4?mrss=true', 'BOOTY FREEDOM', ''],['https://skinandbonesfilm.gosimian.com/assets/videos/TD_SLOC_Nobranding.mp4?mrss=true', 'TD', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Living-On--Family-_1.mp4?mrss=true', 'Living On', 'Family'],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
