--- a/directors/shawn-zeytinoglu/index.html
+++ b/directors/shawn-zeytinoglu/index.html
@@ -181,11 +181,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -225,7 +223,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -235,6 +233,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -347,6 +346,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/GO-Transit--Carsick--30-DC.mp4?mrss=true', 'GO Transit', 'Carsick'],['http://skinandbonesfilm.gosimian.com/assets/videos/Earnest--Pier-One---------------.mp4?mrss=true', 'Earnest', 'Pier One'],['http://skinandbonesfilm.gosimian.com/assets/videos/Bell_-Couples_yoga-.mp4?mrss=true', 'Bell', 'Couples Yoga'],['http://skinandbonesfilm.gosimian.com/assets/videos/TD_TransferFight_31DIR_HighRes.mp4?mrss=true', 'TD', 'Fight'],['http://skinandbonesfilm.gosimian.com/assets/videos/Trulia--Southern-Exposure-.mp4?mrss=true', 'Trulia', 'Southern Exposure'],['http://skinandbonesfilm.gosimian.com/assets/videos/Dell_Godmother_DIR_30HD.mp4?mrss=true', 'DELL', 'Fairy Godmother'],['http://skinandbonesfilm.gosimian.com/assets/videos/Xbox--Digital-Age-.mp4?mrss=true', 'Xbox', 'Digital Age'],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
