--- a/directors/stuart-langfield/index.html
+++ b/directors/stuart-langfield/index.html
@@ -170,11 +170,9 @@
 						</div>
 					</div>
 					<div class="director-portfolio-lightbox-right">
-						<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-mobile" onclick="toggleFullscreen();">
-							<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
-							<div>FULL SCREEN</div>
-						</div>
 						<button class="director-portfolio-lightbox-close" onclick="closeLightbox();">[CLOSE]</button>
+						<button class="director-portfolio-lightbox-next" onclick="nextVideo();">NEXT &gt;</button>
+						<div class="director-portfolio-lightbox-right-spacer"></div>
 						<div class="director-portfolio-lightbox-volume">
 							<div class="director-portfolio-lightbox-volume-levels" onmousedown="setVolume(event);" ontouchstart="setVolume(event);">
 								<div data-active="1"></div>
@@ -214,7 +212,7 @@
 							</div>
 						</div>
 						<div class="director-portfolio-lightbox-controls">
-							<div class="director-portfolio-lightbox-controls-fullscreen director-portfolio-lightbox-controls-fullscreen-desktop" onclick="toggleFullscreen();">
+							<div class="director-portfolio-lightbox-controls-fullscreen" onclick="toggleFullscreen();">
 								<div class="director-portfolio-lightbox-controls-fullscreen-circle"></div>
 								<div>FULL SCREEN</div>
 							</div>
@@ -224,6 +222,7 @@
 							<div class="director-portfolio-lightbox-controls-pause" data-active="0" onclick="pauseVideo();">
 								<svg width="9" height="12" viewBox="0 0 9 12"><line x1="1.95801" y1="0.794922" x2="1.95801" y2="11.1108" stroke-width="2"/><line x1="7.94189" y1="0.794922" x2="7.94189" y2="11.1108" stroke-width="2"/></svg>
 							</div>
+							<div class="director-portfolio-lightbox-controls-spacer"></div>
 							<div class="director-portfolio-lightbox-controls-time">
 								[<span class="director-portfolio-lightbox-controls-time-current">00:00</span> – <span class="director-portfolio-lightbox-controls-time-total">00:00</span>]
 							</div>
@@ -336,6 +335,10 @@
 	</div>
 
 			</div>
+
+			<script>
+				let mediaInfo = [['http://skinandbonesfilm.gosimian.com/assets/videos/terrence_higgins_trust_-_stigma_-60---720p-fra-ed.mp4?mrss=true', 'Terrence Higgins', 'Trust - Stigma'],['https://skinandbonesfilm.gosimian.com/assets/videos/TERRA_4K_H264.mp4?mrss=true', 'Remember The Future', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Police-Scotland--First-Date-1-Framed.mp4?mrss=true', 'Police Scotland', 'First Date'],['https://skinandbonesfilm.gosimian.com/assets/videos/The-Space-Between-Us.mp4?mrss=true', 'The Space Between Us', ''],['http://skinandbonesfilm.gosimian.com/assets/videos/Enough-is-Enough--Energy-.mp4?mrss=true', 'Enough is Enough', 'Energy'],['http://skinandbonesfilm.gosimian.com/assets/videos/OFFF24_SP_WithTitles.mp4?mrss=true', 'OFFF24', 'Synthetic Pleasures'],];
+			</script>
 
 			<script src="/assets/scripts/director-portfolio.js"></script>
 			<script src="/assets/scripts/nav.js"></script>
